force-app/main/default/objects/vlocity_ps__StatementLineItem__c/vlocity_ps__StatementLineItem__c.object-meta.xml
<CustomObject>
    <description>Individual line items constituting details of a client&apos;s statement imported from a billing system.</description>
    <label>Statement Line Item</label>
    <nameField>
        <label>Statement Line Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>