force-app/main/default/objects/vlocity_ps__StatementLineItem__c/fields/vlocity_ps__ChargeType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ChargeType__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>