force-app/main/default/objects/vlocity_ps__StatementLineItem__c/fields/vlocity_ps__CurrentMonthToDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CurrentMonthToDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Month To Date</label>
    <type>Checkbox</type>
</CustomField>