force-app/main/default/objects/vlocity_ps__StatementLineItem__c/fields/vlocity_ps__Frequency__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>