force-app/main/default/objects/vlocity_ps__StatementLineItem__c/fields/vlocity_ps__ProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product/Service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Statement Line Items (Product/Service)</relationshipLabel>
    <relationshipName>ProductId</relationshipName>
    <type>Lookup</type>
</CustomField>