force-app/main/default/objects/vlocity_ps__StatementLineItem__c/fields/vlocity_ps__Sequence__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>