force-app/main/default/objects/vlocity_ps__StatementLineItem__c/fields/vlocity_ps__ServiceType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ServiceType__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>