force-app/main/default/objects/vlocity_ps__StatementLineItem__c/fields/vlocity_ps__StatementId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__StatementId__c</fullName>
    <label>Statement</label>
    <referenceTo>vlocity_ps__Statement__c</referenceTo>
    <relationshipLabel>Statement Line Items</relationshipLabel>
    <relationshipName>Statement_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>