force-app/main/default/objects/vlocity_ps__StatementLineItem__c/fields/vlocity_ps__TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TransactionDate__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>